testsuite/tests/rename/should_compile/T4239A.hs

{-# LANGUAGE TypeOperators #-}

module T4239A where

data (:+++) = (:+++)
            | (:---)
            | X
            | Y

