testsuite/tests/rename/should_fail/T13847A.hs
module T13847A where
data A = A { foo :: () }
